@@ -36,6 +36,8 @@ debci (0.7) UNRELEASED; urgency=medium
     test_* scripts.
   * Move reading of /etc/default/debci from debci-batch to lib/environment.sh,
     so that it applies to all tools.
+  * Support overriding builtin and global (from /etc/default/debci) defaults
+    in config/debci.
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 16 May 2014 12:55:41 -0300
 
